# xaudio

./: .gitignore  README.md  auto_build_aec3.sh  requirements.txt  test_app_startup.py  test_functionality.py  test_vad.py  test_vad_standalone.py
app/: __init__.py  logging_config.py  main.py  media.py  metrics.py  signaling.py  ui.py  utils.py  vad.py
docs/: WINDOWS_BUILD.md
native/: CMakeLists.txt
native/deepfilternet/: gstdeepfilternet.cpp  gstdeepfilternet.h
native/webrtc_aec3/: gstwebrtcaec3.cpp  gstwebrtcaec3.h
scripts/: bootstrap_windows.ps1  build_native.ps1  build_native.sh  build_webrtc_windows.ps1  freeze_requirements.sh  package_macos.sh  package_windows.ps1  run_client.sh  run_dev.sh  run_dev_clean.sh  run_server.sh  run_tests.sh  test_connection.sh  train_detector.py
src/labeler/: __init__.py  cli.py  pipeline.py  postprocess.py  preprocess.py
